fix a spacing issues

--- a/app/assets/css/animatedText.css
+++ b/app/assets/css/animatedText.css
@@ -47,6 +47,10 @@
   transition: .5s;
 }
 
+.signature {
+  right: 0;
+}
+
 /* Cursor styling */
 
 .Typist .Cursor--blinking {
