--- a/app/assets/css/detail.css
+++ b/app/assets/css/detail.css
@@ -6,13 +6,13 @@
 .detailPane {
   width: 600px;
   height: 500px;
-  position: absolute;
-  right: 50px;
-  top: 80px;
+  margin-top: 80px;
+  display: flex;
 }
 
 .detailTitle {
   font-size: 40px;
+  margin-bottom: 15px;
   text-align: center;
 }
 
@@ -55,14 +55,12 @@
 }
 
 .aboutFocus {
-  width: 400px;
+  width: 80%;
   height: 550px;
   overflow: scroll;
   padding-left: 15px;
   border-left: 1px solid black;
-  position: absolute;
-  right: 60px;
-  top: 60px;
+  margin-left: 4px;
 }
 
 .introGreeting {
